--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "serve-json": "json-server -w ./data/db.json"
+    "serve-json": "json-server -w ./data/db.json",
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.21.0",
@@ -29,10 +29,13 @@
     "@types/node-fetch": "latest",
     "@typescript-eslint/eslint-plugin": "5.54.0",
     "@typescript-eslint/parser": "5.54.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.35.0",
     "eslint-plugin-qwik": "0.21.0",
     "node-fetch": "3.3.0",
+    "postcss": "^8.4.16",
     "prettier": "2.8.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.9.5",
     "undici": "5.20.0",
     "vite": "4.1.4",
